--- a/App/.env
+++ b/App/.env
@@ -1,1 +1,5 @@
 DB_CONN="postgresql://postgres:4895@localhost/postgres"
+DB_HOST="localhost"
+DB_NAME="postgres"
+DB_PASS="4895"
+DB_USER="postgres"
